# OpenFairFlow

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  clippy.toml
assets/: tailwind.css
assets/styling/: datasets.css  main.css  navbar.css  workspaces.css
src/: db.rs  main.rs
src/components/: dataset_card.rs  dataset_form.rs  dataset_preview.rs  dataset_viewer.rs  mod.rs
src/models/: dataset.rs  mod.rs  workspace.rs
src/server/: auth.rs  dataset_api.rs  mod.rs  python_runner_template.py  workspace_api.rs
src/views/: dataset_detail.rs  datasets.rs  home.rs  login.rs  mod.rs  navbar.rs  workspace_detail.rs  workspaces.rs
